<resources>
    <string name="app_name">Browse Mate</string>
    <string name="brand_name">BROWSEMATE</string>
    <string name="splash_dialog_title">It Seems You are not Connected!</string>
    <string name="splash_dialog_msg">Connect Using Wifi or Check Your Settings</string>
    <string name="splash_dialog_left">WI-FI</string>
    <string name="splash_dialog_right">Settings</string>
    <string name="not_wifi_snack">Your are not in a Accessible Wifi Zone.Go to Settings</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_registered_user">Not a registered user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_login_with">Or Login With</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of Birth(DD/MM/YYYY)</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="city">City</string>
    <string name="Sign_up_register">Register Yourself</string>
    <string name="registered_sign_up">You are on now.</string>
</resources>
