<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/splash_background"
    tools:context="com.mootarca.browsemate.browsemate.SignInActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp"
            android:background="@color/splash_background"
            tools:context="com.mootarca.browsemate.browsemate.SignInActivity"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/app_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/brand_name"
                android:textSize="25dp"
                android:id="@+id/textView"
                android:textColor="@color/brand_name"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginTop="30dp"
                android:id="@+id/linearLayout">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/email"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/brand_name"
                    android:textColor="@color/brand_name"
                    android:textSize="20dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    android:textColorHint="@color/brand_name"
                    android:textColor="@color/brand_name"
                    android:textSize="20dp"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:id="@+id/login"
                    android:textColor="@color/colorAccent2"
                    android:background="@color/brand_name"
                    android:onClick="signIn"
                    android:textSize="20dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/forgot_password"
                android:textSize="16dp"
                android:textColor="@color/brand_name"
                android:id="@+id/forgotpass"
                android:layout_below="@+id/linearLayout"
                android:layout_alignParentStart="true"
                android:onClick="forgotPassword"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/not_a_registered_user"
                android:textSize="16dp"
                android:textColor="@color/brand_name"
                android:id="@+id/textView2"
                android:layout_below="@+id/forgotpass"
                android:layout_alignParentStart="true"
                android:layout_marginTop="32dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:id="@+id/signup"
                android:textColor="@color/colorAccent2"
                android:background="@color/brand_name"
                android:textSize="20dp"
                android:onClick="signUp"
                android:layout_below="@+id/textView2"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/linearLayout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/brand_name"
                android:text="@string/or_login_with"
                android:id="@+id/or"
                android:textSize="20dp"
                android:layout_below="@+id/signup"
                android:layout_alignParentStart="false"
                android:layout_centerHorizontal="true"
                android:paddingTop="25dp"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton"
                android:src="@drawable/fb_logo"
                android:background="@color/splash_background"
                android:onClick="guestAuth"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/imageView"
                android:layout_below="@+id/or"
                android:paddingTop="12dp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageButton2"
                android:src="@drawable/google_logo"
                android:background="@color/splash_background"
                android:onClick="googleAuth"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/imageButton"
                android:paddingLeft="65dp"/>


        </RelativeLayout>
    </ScrollView>




</RelativeLayout>

